# Moksha-dev

./: .gitignore  README.md
bleapp/: README.md
bleapp/usr/share/bodhidev/: bindings.list  devapp.list  eflapp.list  eflmisc.list  games.list  jeffapp.list
blthemes/: README.md
blthemes/usr/share/bodhidev/: app_theme.list  dpkg_theme.list  elm_theme.list  gtk_theme.list  moksha_theme.list  old_theme.list
bodhi-config-path/: README.md  meson.build
bodhi-config-path/data/completions/: bodhi-config-path
bodhi-config-path/src/: bodhi-config-path  elm-config-path.c  elm-profile-get.c
elf-version/: README.md  meson.build
elf-version/src/: efl_version.c
misc/: efl_version.c
